examples/test/testpolicy15087.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15087
  namespace: namespace203
spec:
  podSelector:
    matchLabels:
      key11: value19
      key46: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value48
          key36: value33
      podSelector:
        matchLabels:
          key33: value44
          key1: value22
          key19: value2
